--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% if posts|length == 0 %}
-    <a href="/newpost">create new post</a>
+    <a href="/new_post">create new post</a>
     {% else %}
 
     <ul>
